# iderive

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  parse.rs
tests/: test.rs
