[package]
name = "iderive"
version = "1.1.1-wip"
authors = ["Maia S. R. <66437537+maia-s@users.noreply.github.com>"]
edition = "2018"
description = "Drop-in replacement for derive that doesn't directly depend on generic bounds"
readme = "README.md"
documentation = "https://docs.rs/iderive"
homepage = "https://github.com/maia-s/iderive"
repository = "https://github.com/maia-s/iderive"
license = "Zlib OR MIT OR Apache-2.0 OR BSL-1.0"
keywords = ["derive", "proc-macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["derive", "parsing", "printing", "proc-macro"]
