[package]
name = "iderive"
version = "1.2.3"
authors = ["Maia S. R. <66437537+maia-s@users.noreply.github.com>"]
edition = "2021"
description = "Drop-in replacement for derive that doesn't directly depend on generic bounds"
readme = "README.md"
documentation = "https://docs.rs/iderive"
homepage = "https://github.com/maia-s/iderive"
repository = "https://github.com/maia-s/iderive"
license = "Zlib OR MIT OR Apache-2.0 OR BSL-1.0"
keywords = ["derive", "proc-macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true
